navigation to html

--- a/interface/index.html
+++ b/interface/index.html
@@ -15,19 +15,19 @@
 			</div>
 			<div
 				class="icon middle"
-				onclick="window.location='/statistik.php';"
+				onclick="window.location='/statistik.html';"
 			>
 				<img src="/img/pie-chart.svg" class="menubild" />
 			</div>
 			<div
 				class="icon bottom"
-				onclick="window.location='/einstellungen.php';"
+				onclick="window.location='/einstellungen.html';"
 			>
 				<img src="/img/settings.svg" class="menubild" />
 			</div>
 			<div
 				class="icon shutdown"
-				onclick="window.location='/api/herunterfahren/herunterfahren.php';"
+				onclick="window.location='/api/herunterfahren/herunterfahren.html';"
 			>
 				<img src="/img/logout.svg" class="menubild" />
 			</div>
