rename to grafana.js

--- a/interface/statistik.html
+++ b/interface/statistik.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Gewaechshaus Raspberry Pi 3B+</title>
 		<link rel="stylesheet" href="/css/style.css" />
-		<script src="/js/ip_adresse.js"></script>
+		<script src="/js/grafana.js"></script>
 	</head>
 	<body>
 		<div class="menu_rahmen">
@@ -38,7 +38,7 @@
 				id="iframe"
 			></iframe>
 			<script>
-				get_ip_adresse();
+				grafana_adresse();
 			</script>
 		</div>
 	</body>
