herunterfahren fix path

--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -24,7 +24,7 @@
 			</div>
 			<div
 				class="icon shutdown"
-				onclick="window.location='/api/sonstiges/herunterfahren.html';"
+				onclick="window.location='/api/sonstiges/herunterfahren.php';"
 			>
 				<img src="/img/logout.svg" class="menubild" />
 			</div>
