--- a/interface/statistik.html
+++ b/interface/statistik.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>Gewaechshaus Raspberry Pi 3B+</title>
 		<link rel="stylesheet" href="/css/style.css" />
 		<script src="/js/grafana.js"></script>
