--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -25,13 +25,19 @@
 			</div>
 			<div
 				class="icon shutdown"
-				onclick="window.location='/api/sonstiges/herunterfahren.php';"
+				onclick="window.location='/api/api.php?herunterfahren_write';"
 			>
 				<img src="/img/logout.svg" class="menubild" />
 			</div>
 		</div>
 		<div class="mitte">
-			<form action="/api/parameter/parameter_update.php">
+			<form action="/api/api.php">
+				<input
+					required
+					type="hidden"
+					name="parameter_write"
+					id="parameter_write"
+				/>
 				<input
 					required
 					type="text"
@@ -151,17 +157,12 @@
 		<script>
 			function selected_slot(selectObject) {
 				var slot = selectObject.value;
-
 				parameter_download(slot);
 
 				function parameter_download(slot) {
 					value = slot;
 					var xhr = new XMLHttpRequest();
-					xhr.open(
-						"POST",
-						"/api/parameter/parameter_download.php",
-						true
-					);
+					xhr.open("POST", "/api/api.php?parameter_read", true);
 					xhr.setRequestHeader(
 						"Content-type",
 						"application/x-www-form-urlencoded"
@@ -170,7 +171,6 @@
 					xhr.onreadystatechange = function() {
 						if (this.readyState == 4 && this.status == 200) {
 							array_parameter = JSON.parse(xhr.responseText);
-
 							document.getElementById("pflanze").value =
 								array_parameter[value - 1].pflanze;
 							document.getElementById("temperatur").value =
@@ -181,15 +181,20 @@
 								array_parameter[value - 1].wassermenge;
 							document.getElementById("luftfeuchtigkeit").value =
 								array_parameter[value - 1].luftfeuchtigkeit;
-							document.getElementById("wert_temperatur").value =
-								array_parameter[value - 1].temperatur;
-							document.getElementById("wert_lichtstunden").value =
+							document.getElementById(
+								"wert_temperatur"
+							).innerHTML = array_parameter[value - 1].temperatur;
+							document.getElementById(
+								"wert_lichtstunden"
+							).innerHTML =
 								array_parameter[value - 1].lichtstunden;
-							document.getElementById("wert_wassermenge").value =
+							document.getElementById(
+								"wert_wassermenge"
+							).innerHTML =
 								array_parameter[value - 1].wassermenge;
 							document.getElementById(
 								"wert_luftfeuchtigkeit"
-							).value =
+							).innerHTML =
 								array_parameter[value - 1].luftfeuchtigkeit;
 						}
 					};
