--- a/interface/statistik.html
+++ b/interface/statistik.html
@@ -25,7 +25,7 @@
 			</div>
 			<div
 				class="icon shutdown"
-				onclick="window.location='/api/sonstiges/herunterfahren.php';"
+				onclick="window.location='/api/api.php?herunterfahren_write';"
 			>
 				<img src="/img/logout.svg" class="menubild" />
 			</div>
