css split to files

--- a/interface/index.html
+++ b/interface/index.html
@@ -3,14 +3,17 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>Gewaechshaus Raspberry Pi 3B+</title>
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="/css/index.css" />
+		<link rel="stylesheet" href="/css/navigation.css" />
+		<link rel="stylesheet" href="/css/livewerte.css" />
+		<link rel="stylesheet" href="/css/mitte.css" />
 		<script src="/js/jquery.min.js"></script>
 		<script src="/js/parameter.js"></script>
 		<script src="/js/zeitfunktionen.js"></script>
 		<script src="/js/betriebsmodus.js"></script>
 	</head>
 	<body>
-		<div class="menu_rahmen">
+		<div class="navigation">
 			<div class="icon top aktiv" onclick="window.location='/';">
 				<img src="/img/house.svg" class="menubild" />
 			</div>
@@ -33,7 +36,7 @@
 				<img src="/img/logout.svg" class="menubild" />
 			</div>
 		</div>
-		<div class="menu_bar">
+		<div class="livewerte">
 			<p class="menu_titel">Live Werte</p>
 			<div class="sensorwert sensorwert_1">
 				<img src="/img/idea.svg" class="sensor_icon" />
