--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -3,11 +3,14 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>Gewaechshaus Raspberry Pi 3B+</title>
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="/css/index.css" />
+		<link rel="stylesheet" href="/css/navigation.css" />
+		<link rel="stylesheet" href="/css/livewerte.css" />
+		<link rel="stylesheet" href="/css/mitte.css" />
 		<script src="/js/jquery.min.js"></script>
 	</head>
 	<body style="background-color:white;">
-		<div class="menu_rahmen">
+		<div class="navigation">
 			<div class="icon top" onclick="window.location='/';">
 				<img src="/img/house.svg" class="menubild" />
 			</div>
