error message style

--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="/css/navigation.css" />
 		<link rel="stylesheet" href="/css/livewerte.css" />
 		<link rel="stylesheet" href="/css/mitte.css" />
+		<link rel="stylesheet" href="/css/fehlermeldung.css" />
 		<script src="/js/jquery.min.js"></script>
 	</head>
 	<body style="background-color:white;">
@@ -155,8 +156,8 @@
 				<br />
 				<input type="submit" value="Speichern" />
 			</form>
-			<div id="error_div">Fehler!</div>
 		</div>
+		<div id="error_message">Es ist ein Fehler aufgetreten!</div>
 		<script>
 			function selected_slot(selectObject) {
 				var slot = selectObject.value;
