--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -5,8 +5,8 @@
 		<title>Gewaechshaus Raspberry Pi 3B+</title>
 		<link rel="stylesheet" href="/css/index.css" />
 		<link rel="stylesheet" href="/css/navigation.css" />
+		<link rel="stylesheet" href="/css/einstellungen.css" />
 		<link rel="stylesheet" href="/css/livewerte.css" />
-		<link rel="stylesheet" href="/css/mitte.css" />
 		<link rel="stylesheet" href="/css/fehlermeldung.css" />
 		<script src="/js/jquery.min.js"></script>
 	</head>
@@ -34,7 +34,7 @@
 				<img src="/img/logout.svg" class="menubild" />
 			</div>
 		</div>
-		<div class="mitte">
+		<div class="einstellungen">
 			<form action="/api/api.php">
 				<input
 					required
