--- a/interface/index.html
+++ b/interface/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/css/index.css" />
 		<link rel="stylesheet" href="/css/navigation.css" />
 		<link rel="stylesheet" href="/css/livewerte.css" />
-		<link rel="stylesheet" href="/css/mitte.css" />
+		<link rel="stylesheet" href="/css/betrieb.css" />
 		<link rel="stylesheet" href="/css/fehlermeldung.css" />
 		<script src="/js/jquery.min.js"></script>
 		<script src="/js/parameter.js"></script>
