--- a/interface/index.html
+++ b/interface/index.html
@@ -12,6 +12,7 @@
 		<script src="/js/parameter.js"></script>
 		<script src="/js/zeitfunktionen.js"></script>
 		<script src="/js/betriebsmodus.js"></script>
+		<script src="/js/dropdown_parameter.js"></script>
 	</head>
 	<body>
 		<div class="navigation">
