--- a/interface/index.html
+++ b/interface/index.html
@@ -208,6 +208,7 @@
 		<div id="error_message">Es ist ein Fehler aufgetreten!</div>
 		<script>
 			get_betriebsmodus();
+			get_minimum_date();
 		</script>
 		<script src="/js/sensorwert_download.js"></script>
 		<script src="/js/error_message.js"></script>
