get active param

--- a/interface/index.html
+++ b/interface/index.html
@@ -179,6 +179,21 @@
 					<div class="parameter slot" id="betriebswahl_slot"></div>
 					<div class="parameter name" id="betriebswahl_name"></div>
 				</div>
+				<div class="slot_parameter">
+					<p class="title_parameter">Soll-Werte:</p>
+					<div class="parameter" id="act_param_temperatur">
+						Temperatur:
+					</div>
+					<div class="parameter" id="act_param_lichtstunden">
+						Licht pro Tag:
+					</div>
+					<div class="parameter" id="act_param_wassermenge">
+						Wasser pro Tag:
+					</div>
+					<div class="parameter" id="act_param_luftfeuchtigkeit">
+						Luftfeuchtigkeit:
+					</div>
+				</div>
 				<div class="fortschritt_rahmen">
 					<div class="fortschritt_balken">
 						<div class="countdown" id="countdown"></div>
