--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="de">
     <head>
@@ -197,9 +195,7 @@
                 </div>
                 <script>
                     var slider_4 = document.getElementById("luftfeuchtigkeit");
-                    var output_4 = document.getElementById(
-                    	"wert_luftfeuchtigkeit"
-                    );
+                    var output_4 = document.getElementById("wert_luftfeuchtigkeit");
                     output_4.innerHTML = slider_4.value;
                     
                     slider_4.oninput = function() {
