--- a/interface/index.html
+++ b/interface/index.html
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		<div class="livewerte">
-			<p class="menu_titel">Live Werte</p>
+			<p class="menu_titel">Ist Werte</p>
 			<div class="sensorwert sensorwert_1">
 				<img src="/img/idea.svg" class="sensor_icon" />
 				<a class="sensor_zahl" id="lichtstaerke_wert"></a>
@@ -78,18 +78,26 @@
 					<div class="select option" id="slot9" data-id="9"></div>
 					<div class="select option" id="slot10" data-id="10"></div>
 				</div>
+				<div class="slot_titel">Sollwerte</div>
 				<div class="slot_parameter">
-					<p class="title_parameter">Soll-Werte:</p>
-					<div class="parameter" id="temperatur">Temperatur:</div>
-					<div class="parameter" id="lichtstunden">
-						Licht pro Tag:
-					</div>
-					<div class="parameter" id="wassermenge">
-						Wasser pro Tag:
-					</div>
-					<div class="parameter" id="luftfeuchtigkeit">
-						Luftfeuchtigkeit:
-					</div>
+					<table class="table_parameter">
+						<tr>
+							<td class="parameter_text">Temperatur</td>
+							<td class="parameter_wert" id="temperatur"></td>
+						</tr>
+						<tr>
+							<td class="parameter_text">Licht pro Tag</td>
+							<td class="parameter_wert" id="lichtstunden"></td>
+						</tr>
+						<tr>
+							<td class="parameter_text">Wasser pro Tag</td>
+							<td class="parameter_wert" id="wassermenge"></td>
+						</tr>
+						<tr>
+							<td class="parameter_text">Luftfeuchtigkeit</td>
+							<td class="parameter_wert" id="luftfeuchtigkeit"></td>
+						</tr>
+					</table>
 				</div>
 				<div class="betriebsmodus">
 					<form action="/api/api.php">
@@ -113,11 +121,14 @@
 							id="parameter_name"
 							value="0"
 						/>
+						<div class="endzeit">
+						<a class="endzeit_text">Endzeitpunkt:</a>
 						<input
 							required
 							type="date"
 							name="programm_datum_ende"
 							id="programm_datum_ende"
+							class="datumwahl"
 						/>
 						<input
 							required
@@ -125,7 +136,9 @@
 							name="programm_zeit_ende"
 							value="14:00"
 							id="programm_zeit_ende"
+							class="zeitwahl"
 						/>
+						</div>
 						<input
 							required
 							type="hidden"
@@ -133,7 +146,7 @@
 							id="programm_status"
 							value="start"
 						/>
-						<input type="submit" value="Start" />
+						<input class="startbutton" type="submit" value="Start" />
 					</form>
 				</div>
 			</div>
@@ -168,31 +181,43 @@
 							value="stop"
 						/>
 						<input
-							class="button_primary button_abbrechen"
+							class="button_abbrechen"
 							id="button_abbrechen"
 							type="submit"
-							value="Beenden"
+							value="Abbrechen"
 						/>
 					</form>
 				</div>
-				<div class="parameter_betriebswahl">
-					<div class="parameter slot" id="betriebswahl_slot"></div>
-					<div class="parameter name" id="betriebswahl_name"></div>
-				</div>
+					<table class="parameter_betriebswahl">
+						<tr>
+							<td class="parameter_left">Programm:</td>
+							<td id="betriebswahl_name"></td>
+						</tr>
+						<tr>
+							<td class="parameter_left">Gewählter Slot:</td>
+							<td id="betriebswahl_slot"></td>
+						</tr>
+					</table>
+				<div class="slot_titel">Sollwerte</div>
 				<div class="slot_parameter">
-					<p class="title_parameter">Soll-Werte:</p>
-					<div class="parameter" id="act_param_temperatur">
-						Temperatur:
-					</div>
-					<div class="parameter" id="act_param_lichtstunden">
-						Licht pro Tag:
-					</div>
-					<div class="parameter" id="act_param_wassermenge">
-						Wasser pro Tag:
-					</div>
-					<div class="parameter" id="act_param_luftfeuchtigkeit">
-						Luftfeuchtigkeit:
-					</div>
+					<table class="table_parameter">
+						<tr>
+							<td class="parameter_text">Temperatur</td>
+							<td class="parameter_wert" id="act_param_temperatur"></td>
+						</tr>
+						<tr>
+							<td class="parameter_text">Licht pro Tag</td>
+							<td class="parameter_wert" id="act_param_lichtstunden"></td>
+						</tr>
+						<tr>
+							<td class="parameter_text">Wasser pro Tag</td>
+							<td class="parameter_wert" id="act_param_wassermenge"></td>
+						</tr>
+						<tr>
+							<td class="parameter_text">Luftfeuchtigkeit</td>
+							<td class="parameter_wert" id="act_param_luftfeuchtigkeit"></td>
+						</tr>
+					</table>
 				</div>
 				<div class="fortschritt_rahmen">
 					<div class="fortschritt_balken">
