--- a/interface/index.html
+++ b/interface/index.html
@@ -95,7 +95,10 @@
 						</tr>
 						<tr>
 							<td class="parameter_text">Luftfeuchtigkeit</td>
-							<td class="parameter_wert" id="luftfeuchtigkeit"></td>
+							<td
+								class="parameter_wert"
+								id="luftfeuchtigkeit"
+							></td>
 						</tr>
 					</table>
 				</div>
@@ -122,22 +125,22 @@
 							value="0"
 						/>
 						<div class="endzeit">
-						<a class="endzeit_text">Endzeitpunkt:</a>
-						<input
-							required
-							type="date"
-							name="programm_datum_ende"
-							id="programm_datum_ende"
-							class="datumwahl"
-						/>
-						<input
-							required
-							type="time"
-							name="programm_zeit_ende"
-							value="14:00"
-							id="programm_zeit_ende"
-							class="zeitwahl"
-						/>
+							<a class="endzeit_text">Endzeitpunkt:</a>
+							<input
+								required
+								type="date"
+								name="programm_datum_ende"
+								id="programm_datum_ende"
+								class="datumwahl"
+							/>
+							<input
+								required
+								type="time"
+								name="programm_zeit_ende"
+								value="14:00"
+								id="programm_zeit_ende"
+								class="zeitwahl"
+							/>
 						</div>
 						<input
 							required
@@ -146,7 +149,11 @@
 							id="programm_status"
 							value="start"
 						/>
-						<input class="startbutton" type="submit" value="Start" />
+						<input
+							class="startbutton"
+							type="submit"
+							value="Start"
+						/>
 					</form>
 				</div>
 			</div>
@@ -188,34 +195,47 @@
 						/>
 					</form>
 				</div>
-					<table class="parameter_betriebswahl">
-						<tr>
-							<td class="parameter_left">Programm:</td>
-							<td id="betriebswahl_name"></td>
-						</tr>
-						<tr>
-							<td class="parameter_left">Gewählter Slot:</td>
-							<td id="betriebswahl_slot"></td>
-						</tr>
-					</table>
+				<table class="parameter_betriebswahl">
+					<tr>
+						<td class="parameter_left">Programm:</td>
+						<td id="betriebswahl_name"></td>
+					</tr>
+					<tr>
+						<td class="parameter_left">Gewählter Slot:</td>
+						<td id="betriebswahl_slot"></td>
+					</tr>
+				</table>
+
 				<div class="slot_titel">Sollwerte</div>
 				<div class="slot_parameter">
 					<table class="table_parameter">
 						<tr>
 							<td class="parameter_text">Temperatur</td>
-							<td class="parameter_wert" id="act_param_temperatur"></td>
+							<td
+								class="parameter_wert"
+								id="act_param_temperatur"
+							></td>
 						</tr>
 						<tr>
 							<td class="parameter_text">Licht pro Tag</td>
-							<td class="parameter_wert" id="act_param_lichtstunden"></td>
+							<td
+								class="parameter_wert"
+								id="act_param_lichtstunden"
+							></td>
 						</tr>
 						<tr>
 							<td class="parameter_text">Wasser pro Tag</td>
-							<td class="parameter_wert" id="act_param_wassermenge"></td>
+							<td
+								class="parameter_wert"
+								id="act_param_wassermenge"
+							></td>
 						</tr>
 						<tr>
 							<td class="parameter_text">Luftfeuchtigkeit</td>
-							<td class="parameter_wert" id="act_param_luftfeuchtigkeit"></td>
+							<td
+								class="parameter_wert"
+								id="act_param_luftfeuchtigkeit"
+							></td>
 						</tr>
 					</table>
 				</div>
