--- a/interface/index.html
+++ b/interface/index.html
@@ -125,6 +125,7 @@
 								name="programm_datum_ende"
 								id="programm_datum_ende"
 								class="datumwahl"
+								placeholder="Datum"
 							/>
 							<input
 								required
