html maxlengt and table nowrap

--- a/interface/index.html
+++ b/interface/index.html
@@ -184,12 +184,12 @@
 				</div>
 				<table class="parameter_betriebswahl">
 					<tr>
-						<td class="parameter_left">Programm:</td>
-						<td id="betriebswahl_name"></td>
+						<td nowrap class="parameter_left">Programm:</td>
+						<td nowrap id="betriebswahl_name"></td>
 					</tr>
 					<tr>
-						<td class="parameter_left">Gewählter Slot:</td>
-						<td id="betriebswahl_slot"></td>
+						<td nowrap class="parameter_left">Gewählter Slot:</td>
+						<td nowrap id="betriebswahl_slot"></td>
 					</tr>
 				</table>
 
