--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/css/navigation.css" />
 		<link rel="stylesheet" href="/css/einstellungen.css" />
 		<link rel="stylesheet" href="/css/livewerte.css" />
-		<link rel="stylesheet" href="/css/fehlermeldung.css" />
+		<link rel="stylesheet" href="/css/meldungen.css" />
 		<script src="/js/jquery.min.js"></script>
 	</head>
 	<body style="background-color:white;">
@@ -188,6 +188,6 @@
 		</div>
 		<div id="error_message">Es ist ein Fehler aufgetreten!</div>
 		<script src="/js/einstellungen.js"></script>
-		<script src="/js/error_message.js"></script>
+		<script src="/js/message.js"></script>
 	</body>
 </html>
