--- a/interface/index.html
+++ b/interface/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/css/navigation.css" />
 		<link rel="stylesheet" href="/css/livewerte.css" />
 		<link rel="stylesheet" href="/css/betrieb.css" />
-		<link rel="stylesheet" href="/css/fehlermeldung.css" />
+		<link rel="stylesheet" href="/css/meldungen.css" />
 		<script src="/js/jquery.min.js"></script>
 		<script src="/js/betriebsmodus.js"></script>
 		<script src="/js/parameter.js"></script>
@@ -258,6 +258,6 @@
 			get_minimum_date();
 		</script>
 		<script src="/js/sensorwert_download.js"></script>
-		<script src="/js/error_message.js"></script>
+		<script src="/js/message.js"></script>
 	</body>
 </html>
