--- a/interface/index.html
+++ b/interface/index.html
@@ -252,7 +252,8 @@
 				</div>
 			</div>
 		</div>
-		<div id="error_message">Es ist ein Fehler aufgetreten!</div>
+		<div id="error_message">Es ist ein fehler aufgetreten!</div>
+		<div id="success_message">Aktion erfolgreich ausgeführt!</div>
 		<script>
 			get_betriebsmodus();
 			get_minimum_date();
