--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -186,7 +186,8 @@
 				<input class="speichern" type="submit" value="Speichern" />
 			</form>
 		</div>
-		<div id="error_message">Es ist ein Fehler aufgetreten!</div>
+		<div id="error_message">Es ist ein fehler aufgetreten!</div>
+		<div id="success_message">Aktion erfolgreich ausgeführt!</div>
 		<script src="/js/einstellungen.js"></script>
 		<script src="/js/message.js"></script>
 	</body>
