start stop to 1 0

--- a/interface/index.html
+++ b/interface/index.html
@@ -141,7 +141,7 @@
 							type="hidden"
 							name="programm_status"
 							id="programm_status"
-							value="start"
+							value="1"
 						/>
 						<input
 							class="startbutton"
@@ -172,7 +172,7 @@
 							type="hidden"
 							name="programm_status"
 							id="programm_status"
-							value="stop"
+							value="0"
 						/>
 						<input
 							class="button_abbrechen"
