--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -115,10 +115,10 @@
 									type="range"
 									id="lichtstunden"
 									name="lichtstunden"
-									min="0.0"
-									max="24.0"
-									value="12.0"
-									step="0.1"
+									min="0"
+									max="24"
+									value="12"
+									step="1"
 									class="slider"
 								/>
 							</td>
@@ -133,25 +133,25 @@
 						<tr>
 							<td class="td1">
 								<p class="aktueller_wert_regler">
-									Wassermenge:
-									<span id="wert_wassermenge"></span> l/Tag
+									Wasser:
+									<span id="wert_wassermenge"></span> dl/Tag
 								</p>
 							</td>
-							<td class="td2">0l</td>
+							<td class="td2">0dl</td>
 							<td class="td3">
 								<input
 									type="range"
 									id="wassermenge"
 									name="wassermenge"
-									min="0.0"
-									max="1.0"
-									value="0.5"
-									step="0.1"
+									min="0"
+									max="10"
+									value="5"
+									step="1"
 									class="slider"
 								/>
 							</td>
 							<td class="td4">
-								1l
+								10dl
 							</td>
 						</tr>
 					</table>
@@ -165,20 +165,20 @@
 									<span id="wert_luftfeuchtigkeit"></span> %
 								</p>
 							</td>
-							<td class="td2">50%</td>
+							<td class="td2">30%</td>
 							<td class="td3">
 								<input
 									type="range"
 									id="luftfeuchtigkeit"
 									name="luftfeuchtigkeit"
-									min="50"
-									max="80"
-									value="65"
+									min="30"
+									max="90"
+									value="60"
 									class="slider"
 								/>
 							</td>
 							<td class="td4">
-								80%
+								90%
 							</td>
 						</tr>
 					</table>
