--- a/interface/index.html
+++ b/interface/index.html
@@ -35,7 +35,7 @@
 				class="icon shutdown"
 				onclick="window.location='/api/api.php?herunterfahren_write';"
 			>
-				<img src="/img/logout.svg" class="menubild" />
+				<img src="/img/dots.svg" class="menubild" />
 			</div>
 		</div>
 		<div class="livewerte">
