--- a/interface/statistik.html
+++ b/interface/statistik.html
@@ -29,7 +29,7 @@
 				class="icon shutdown"
 				onclick="window.location='/api/api.php?herunterfahren_write';"
 			>
-				<img src="/img/logout.svg" class="menubild" />
+				<img src="/img/dots.svg" class="menubild" />
 			</div>
 		</div>
 		<div class="statistik_iframe">
