--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -27,10 +27,7 @@
 			>
 				<img src="/img/settings.svg" class="menubild" />
 			</div>
-			<div
-				class="icon shutdown"
-				onclick="window.location='/api/api.php?herunterfahren_write';"
-			>
+			<div class="icon admin" onclick="window.location='/admin.html';">
 				<img src="/img/dots.svg" class="menubild" />
 			</div>
 		</div>
