--- a/interface/admin.html
+++ b/interface/admin.html
@@ -5,16 +5,15 @@
 		<title>Gewaechshaus Raspberry Pi 3B+</title>
 		<link rel="stylesheet" href="/css/index.css" />
 		<link rel="stylesheet" href="/css/navigation.css" />
-		<link rel="stylesheet" href="/css/statistik.css" />
-		<script src="/js/grafana.js"></script>
+		<script src="/js/jquery.min.js"></script>
 	</head>
-	<body>
+	<body style="background-color:white;">
 		<div class="navigation">
 			<div class="icon top" onclick="window.location='/';">
 				<img src="/img/house.svg" class="menubild" />
 			</div>
 			<div
-				class="icon middle aktiv"
+				class="icon middle"
 				onclick="window.location='/statistik.html';"
 			>
 				<img src="/img/pie-chart.svg" class="menubild" />
@@ -25,21 +24,12 @@
 			>
 				<img src="/img/settings.svg" class="menubild" />
 			</div>
-			<div class="icon admin" onclick="window.location='/admin.html';">
+			<div
+				class="icon admin aktiv"
+				onclick="window.location='/admin.html';"
+			>
 				<img src="/img/dots.svg" class="menubild" />
 			</div>
-		</div>
-		<div class="statistik_iframe">
-			<iframe
-				src=""
-				width="100%"
-				height="100%"
-				frameborder="0"
-				id="iframe"
-			></iframe>
-			<script>
-				grafana_adresse();
-			</script>
 		</div>
 	</body>
 </html>
