--- a/interface/statistik.html
+++ b/interface/statistik.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/css/index.css" />
 		<link rel="stylesheet" href="/css/navigation.css" />
 		<link rel="stylesheet" href="/css/statistik.css" />
-		<script src="/js/ipadresse.js"></script>
+		<script src="/js/ip_adresse.js"></script>
 	</head>
 	<body>
 		<div class="navigation">
