--- a/interface/admin.html
+++ b/interface/admin.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/css/navigation.css" />
 		<link rel="stylesheet" href="/css/admin.css" />
 		<script src="/js/jquery.min.js"></script>
-		<script src="/js/jquery.min.js"></script>
+		<script src="/js/ip_adresse.js"></script>
 	</head>
 	<body style="background-color:white;">
 		<div class="navigation">
@@ -69,12 +69,15 @@
 		<div class="informationen_box">
 			<div class="ip_adresse_box">
 				<a class="info_titel">IP Adresse:</a>
-				<a class="ip_adress"></a>
+				<a class="ip_adress" id="ip_adress"></a>
 			</div>
 			<div class="zeit_box">
 				<a class="info_titel">Systemzeit:</a>
 				<a class="zeit"></a>
 			</div>
 		</div>
+		<script>
+			ip_adresse();
+		</script>
 	</body>
 </html>
