--- a/interface/admin.html
+++ b/interface/admin.html
@@ -72,12 +72,16 @@
 				<a class="ip_adress" id="ip_adress"></a>
 			</div>
 			<div class="zeit_box">
-				<a class="info_titel">Systemzeit:</a>
-				<a class="zeit"></a>
+				<a class="info_titel">Datum/Zeit:</a>
+				<a class="zeit" id="date_time"></a>
 			</div>
 		</div>
 		<script>
 			ip_adresse();
+		</script>
+		<script src="/js/admin.js"></script>
+		<script>
+			window.onload = datumzeit("date_time");
 		</script>
 	</body>
 </html>
