--- a/interface/admin.html
+++ b/interface/admin.html
@@ -40,11 +40,7 @@
 			</button>
 
 			<button class="button" type="button" onclick="">
-				Grundstellung
-			</button>
-
-			<button class="button" type="button" onclick="">
-				System Stop
+				System Stop, Grundstellung
 			</button>
 
 			<button class="button" type="button" onclick="">
@@ -52,15 +48,15 @@
 			</button>
 
 			<button class="button" type="button" onclick="">
-				Parameter Reset
+				Datenbank Reset
 			</button>
 
 			<button class="button" type="button" onclick="">
-				I2C Liste
+				Bussystem Übersicht
 			</button>
 
 			<button class="button" type="button" onclick="">
-				Fehlerlog reset
+				Meldungen löschen
 			</button>
 		</div>
 
