--- a/interface/admin.html
+++ b/interface/admin.html
@@ -52,7 +52,7 @@
 			</button>
 
 			<button class="button" type="button" onclick="">
-				Bussystem Übersicht
+				System Übersicht
 			</button>
 
 			<button class="button" type="button" onclick="">
