--- a/interface/admin.html
+++ b/interface/admin.html
@@ -52,7 +52,7 @@
 			</button>
 
 			<button class="button" type="button" onclick="">
-				Meldungen löschen
+				Fehlermeldungen löschen
 			</button>
 
 			<button class="button" type="button" onclick="">
