--- a/interface/admin.html
+++ b/interface/admin.html
@@ -36,7 +36,7 @@
 
 		<div class="button_box">
 			<button class="button" type="button" onclick="">
-				System Stop, Grundstellung
+				System Stop und Grundstellung
 			</button>
 
 			<button class="button" type="button" onclick="">
