fehlermeldungen api read to html

--- a/interface/admin.html
+++ b/interface/admin.html
@@ -60,7 +60,9 @@
 			</button>
 		</div>
 
-		<div class="fehlerlog_box"></div>
+		<div class="fehlerlog_box">
+			<div class="meldungen" id="meldungen"></div>
+		</div>
 
 		<div class="informationen_box">
 			<div class="ip_adresse_box">
@@ -79,5 +81,6 @@
 		<script>
 			window.onload = datumzeit("date_time");
 		</script>
+		<script src="/js/fehlermeldungen.js"></script>
 	</body>
 </html>
