--- a/interface/admin.html
+++ b/interface/admin.html
@@ -61,6 +61,7 @@
 		</div>
 
 		<div class="fehlerlog_box">
+			<div class="meldungen-titel">Fehlermeldungen</div>
 			<div class="meldungen" id="meldungen"></div>
 		</div>
 
