--- a/interface/admin.html
+++ b/interface/admin.html
@@ -5,6 +5,7 @@
 		<title>Gewaechshaus Raspberry Pi 3B+</title>
 		<link rel="stylesheet" href="/css/index.css" />
 		<link rel="stylesheet" href="/css/navigation.css" />
+		<link rel="stylesheet" href="/css/meldungen.css" />
 		<link rel="stylesheet" href="/css/admin.css" />
 		<script src="/js/jquery.min.js"></script>
 		<script src="/js/ip_adresse.js"></script>
@@ -47,7 +48,11 @@
 				System Übersicht
 			</button>
 
-			<button class="button" type="button" onclick="">
+			<button
+				class="button"
+				type="button"
+				onclick="location.href='/api/api.php?datenbank_reset_write'"
+			>
 				Datenbank Reset
 			</button>
 
@@ -82,6 +87,9 @@
 		<script>
 			window.onload = datumzeit("date_time");
 		</script>
+		<div id="error_message">Es ist ein fehler aufgetreten!</div>
+		<div id="success_message">Aktion erfolgreich ausgeführt!</div>
 		<script src="/js/fehlermeldungen.js"></script>
+		<script src="/js/message.js"></script>
 	</body>
 </html>
