--- a/interface/admin.html
+++ b/interface/admin.html
@@ -56,7 +56,11 @@
 				Datenbank Reset
 			</button>
 
-			<button class="button" type="button" onclick="">
+			<button
+				class="button"
+				type="button"
+				onclick="location.href='/api/api.php?fehlermeldung_reset_write'"
+			>
 				Fehlermeldungen löschen
 			</button>
 
