--- a/interface/admin.html
+++ b/interface/admin.html
@@ -53,7 +53,7 @@
 				type="button"
 				onclick="location.href='/api/api.php?datenbank_reset_write'"
 			>
-				Datenbank Reset
+				Datenbank zurücksetzen
 			</button>
 
 			<button
