--- a/interface/admin.html
+++ b/interface/admin.html
@@ -37,11 +37,19 @@
 
 		<div class="button_box">
 			<button class="button" type="button" onclick="">
-				System Stop und Grundstellung
+				System Stoppen
 			</button>
 
 			<button class="button" type="button" onclick="">
-				System Start
+				System Starten
+			</button>
+
+			<button class="button" type="button" onclick="">
+				Manuelle Aktorsteuerung
+			</button>
+
+			<button class="button" type="button" onclick="">
+				Systemübersicht
 			</button>
 
 			<button
