--- a/interface/admin.html
+++ b/interface/admin.html
@@ -36,11 +36,19 @@
 		</div>
 
 		<div class="button_box">
-			<button class="button" type="button" onclick="">
+			<button
+				class="button"
+				type="button"
+				onclick="location.href='/api/api.php?system_stop_write'"
+			>
 				System Stoppen
 			</button>
 
-			<button class="button" type="button" onclick="">
+			<button
+				class="button"
+				type="button"
+				onclick="location.href='/api/api.php?system_start_write'"
+			>
 				System Starten
 			</button>
 
@@ -68,7 +76,11 @@
 				Fehlermeldungen löschen
 			</button>
 
-			<button class="button" type="button" onclick="">
+			<button
+				class="button"
+				type="button"
+				onclick="location.href='/api/api.php?system_shutdown_write'"
+			>
 				Herunterfahren
 			</button>
 		</div>
