--- a/interface/admin.html
+++ b/interface/admin.html
@@ -71,9 +71,9 @@
 			<button
 				class="button"
 				type="button"
-				onclick="location.href='/api/api.php?fehlermeldung_reset_write'"
+				onclick="location.href='/api/api.php?betriebsmeldung_reset_write'"
 			>
-				Fehlermeldungen löschen
+				Betriebsmeldungen löschen
 			</button>
 
 			<button
@@ -85,8 +85,8 @@
 			</button>
 		</div>
 
-		<div class="fehlerlog_box">
-			<div class="meldungen-titel">Fehlermeldungen</div>
+		<div class="log_box">
+			<div class="meldungen-titel">Betriebsmeldungen</div>
 			<div class="meldungen" id="meldungen"></div>
 		</div>
 
@@ -107,7 +107,7 @@
 		</script>
 		<div id="error_message">Es ist ein fehler aufgetreten!</div>
 		<div id="success_message">Aktion erfolgreich ausgeführt!</div>
-		<script src="/js/fehlermeldungen.js"></script>
+		<script src="/js/betriebsmeldungen.js"></script>
 		<script src="/js/message.js"></script>
 	</body>
 </html>
