--- a/interface/admin.html
+++ b/interface/admin.html
@@ -103,69 +103,79 @@
 					onclick="betriebsmeldungen()"
 				/>
 			</div>
-			<div class="hmi">
-				<button class="aktor_button" type="button">
-					Türen [öffnen]
-				</button>
-				<button class="aktor_button" type="button">
-					Türen [schliessen]
-				</button>
-				<br />
-				<button class="aktor_button" type="button">
-					Lüfter gross [Ein]
-				</button>
-				<button class="aktor_button" type="button">
-					Lüfter gross [Aus]
-				</button>
-				<br />
-				<button class="aktor_button" type="button">
-					Lüfter klein [Ein]
-				</button>
-				<button class="aktor_button" type="button">
-					Lüfter klein [Aus]
-				</button>
-				<br />
-				<button class="aktor_button" type="button">
-					Wasserpumpe [Ein]
-				</button>
-				<button class="aktor_button" type="button">
-					Wasserpumpe [Aus]
-				</button>
-				<br />
-				<button class="aktor_button" type="button">
-					Ventil Wasserpumpe [Auf]
-				</button>
-				<button class="aktor_button" type="button">
-					Ventil Wasserpumpe [Zu]
-				</button>
-				<br />
-				<button class="aktor_button" type="button">
-					Ventil Befeuchter [Auf]
-				</button>
-				<button class="aktor_button" type="button">
-					Ventil Befeuchter [Zu]
-				</button>
-				<br />
-				<button class="aktor_button" type="button">
-					Licht [Ein]
-				</button>
-				<button class="aktor_button" type="button">
-					Licht [Aus]
-				</button>
-				<br />
-				<button class="aktor_button" type="button">
-					Heizung [Ein]
-				</button>
-				<button class="aktor_button" type="button">
-					Heizung [Aus]
-				</button>
-				<br />
-				<button class="aktor_button" type="button">
-					Befeuchter [Ein]
-				</button>
-				<button class="aktor_button" type="button">
-					Befeuchter [Aus]
-				</button>
+			<div class="hmi aktorsteuerung">
+				<div class="aktor_gruppe">
+					<button class="aktor_button" type="button">
+						Türen [öffnen]
+					</button>
+					<button class="aktor_button" type="button">
+						Türen [schliessen]
+					</button>
+				</div>
+				<div class="aktor_gruppe">
+					<button class="aktor_button" type="button">
+						Lüfter gross [Ein]
+					</button>
+					<button class="aktor_button" type="button">
+						Lüfter gross [Aus]
+					</button>
+				</div>
+				<div class="aktor_gruppe">
+					<button class="aktor_button" type="button">
+						Lüfter klein [Ein]
+					</button>
+					<button class="aktor_button" type="button">
+						Lüfter klein [Aus]
+					</button>
+				</div>
+				<div class="aktor_gruppe">
+					<button class="aktor_button" type="button">
+						Wasserpumpe [Ein]
+					</button>
+					<button class="aktor_button" type="button">
+						Wasserpumpe [Aus]
+					</button>
+				</div>
+				<div class="aktor_gruppe">
+					<button class="aktor_button" type="button">
+						Ventil Wasserpumpe [Auf]
+					</button>
+					<button class="aktor_button" type="button">
+						Ventil Wasserpumpe [Zu]
+					</button>
+				</div>
+				<div class="aktor_gruppe">
+					<button class="aktor_button" type="button">
+						Ventil Befeuchter [Auf]
+					</button>
+					<button class="aktor_button" type="button">
+						Ventil Befeuchter [Zu]
+					</button>
+				</div>
+				<div class="aktor_gruppe">
+					<button class="aktor_button" type="button">
+						Licht [Ein]
+					</button>
+					<button class="aktor_button" type="button">
+						Licht [Aus]
+					</button>
+				</div>
+				<div class="aktor_gruppe">
+					<button class="aktor_button" type="button">
+						Heizung [Ein]
+					</button>
+					<button class="aktor_button" type="button">
+						Heizung [Aus]
+					</button>
+				</div>
+				<div class="aktor_gruppe">
+					<button class="aktor_button" type="button">
+						Befeuchter [Ein]
+					</button>
+					<button class="aktor_button" type="button">
+						Befeuchter [Aus]
+					</button>
+				</div>
 			</div>
 		</div>
 
