--- a/interface/admin.html
+++ b/interface/admin.html
@@ -41,7 +41,7 @@
 				type="button"
 				onclick="location.href='/api/api.php?system_stop_write'"
 			>
-				System Stoppen + Grundstellung
+				System Stoppen und Grundstellung
 			</button>
 
 			<button
