--- a/interface/admin.html
+++ b/interface/admin.html
@@ -108,14 +108,14 @@
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(tuer_1)"
+						onclick="aktor_steuern('tuer_1')"
 					>
 						Türen [öffnen]
 					</button>
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(tuer_0)"
+						onclick="aktor_steuern('tuer_0')"
 					>
 						Türen [schliessen]
 					</button>
@@ -124,14 +124,14 @@
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(luefter_gross_1)"
+						onclick="aktor_steuern('luefter_gross_1')"
 					>
 						Lüfter gross [Ein]
 					</button>
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(luefter_gross_0)"
+						onclick="aktor_steuern('luefter_gross_0')"
 					>
 						Lüfter gross [Aus]
 					</button>
@@ -140,14 +140,14 @@
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(luefter_klein_1)"
+						onclick="aktor_steuern('luefter_klein_1')"
 					>
 						Lüfter klein [Ein]
 					</button>
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(luefter_klein_0)"
+						onclick="aktor_steuern('luefter_klein_0')"
 					>
 						Lüfter klein [Aus]
 					</button>
@@ -156,14 +156,14 @@
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(wasserpumpe_1)"
+						onclick="aktor_steuern('wasserpumpe_1')"
 					>
 						Wasserpumpe [Ein]
 					</button>
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(wasserpumpe_0)"
+						onclick="aktor_steuern('wasserpumpe_0')"
 					>
 						Wasserpumpe [Aus]
 					</button>
@@ -172,14 +172,14 @@
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(ventil_wasserpumpe_1)"
+						onclick="aktor_steuern('ventil_wasserpumpe_1')"
 					>
 						Ventil Wasserpumpe [Auf]
 					</button>
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(ventil_wasserpumpe_0)"
+						onclick="aktor_steuern('ventil_wasserpumpe_0')"
 					>
 						Ventil Wasserpumpe [Zu]
 					</button>
@@ -188,14 +188,14 @@
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(ventil_befeuchter_1)"
+						onclick="aktor_steuern('ventil_befeuchter_1')"
 					>
 						Ventil Befeuchter [Auf]
 					</button>
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(ventil_befeuchter_0)"
+						onclick="aktor_steuern('ventil_befeuchter_0')"
 					>
 						Ventil Befeuchter [Zu]
 					</button>
@@ -204,14 +204,14 @@
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(licht_1)"
+						onclick="aktor_steuern('licht_1')"
 					>
 						Licht [Ein]
 					</button>
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(licht_0)"
+						onclick="aktor_steuern('licht_0')"
 					>
 						Licht [Aus]
 					</button>
@@ -220,14 +220,14 @@
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(heizung_1)"
+						onclick="aktor_steuern('heizung_1')"
 					>
 						Heizung [Ein]
 					</button>
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(heizung_0)"
+						onclick="aktor_steuern('heizung_0')"
 					>
 						Heizung [Aus]
 					</button>
@@ -236,14 +236,14 @@
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(befeuchter_1)"
+						onclick="aktor_steuern('befeuchter_1')"
 					>
 						Befeuchter [Ein]
 					</button>
 					<button
 						class="aktor_button"
 						type="button"
-						onclick="aktor_steuern(befeuchter_0)"
+						onclick="aktor_steuern('befeuchter_0')"
 					>
 						Befeuchter [Aus]
 					</button>
