--- a/interface/admin.html
+++ b/interface/admin.html
@@ -103,7 +103,7 @@
 					onclick="betriebsmeldungen()"
 				/>
 			</div>
-			<div class="hmi aktorsteuerung">
+			<div class="hmi aktorsteuerung block_overflow">
 				<div class="aktor_gruppe">
 					<button
 						class="aktor_button"
@@ -260,7 +260,16 @@
 					onclick="betriebsmeldungen()"
 				/>
 			</div>
-			<div class="hmi"></div>
+			<div class="hmi block_overflow">
+				<div
+					class="systemstatus gewaechshaus_status"
+					id="gewaechshaus_status"
+				></div>
+				<div
+					class="systemstatus bussystem_status"
+					id="bussystem_status"
+				></div>
+			</div>
 		</div>
 
 		<div class="informationen_box">
