statistik js eigenständig

--- a/interface/statistik.html
+++ b/interface/statistik.html
@@ -6,7 +6,6 @@
 		<link rel="stylesheet" href="/css/index.css" />
 		<link rel="stylesheet" href="/css/navigation.css" />
 		<link rel="stylesheet" href="/css/statistik.css" />
-		<script src="/js/ip_adresse.js"></script>
 	</head>
 	<body>
 		<div class="navigation">
@@ -37,9 +36,7 @@
 				frameborder="0"
 				id="iframe"
 			></iframe>
-			<script>
-				ip_adresse();
-			</script>
 		</div>
+		<script src="/js/statistik.js"></script>
 	</body>
 </html>
