--- a/interface/index.html
+++ b/interface/index.html
@@ -9,10 +9,6 @@
 		<link rel="stylesheet" href="/css/betrieb.css" />
 		<link rel="stylesheet" href="/css/meldungen.css" />
 		<script src="/js/jquery.min.js"></script>
-		<script src="/js/parameter.js"></script>
-		<script src="/js/betriebsmodus.js"></script>
-		<script src="/js/zeitfunktionen.js"></script>
-		<script src="/js/dropdown_parameter.js"></script>
 	</head>
 	<body>
 		<div class="navigation">
@@ -251,11 +247,6 @@
 		</div>
 		<div id="error_message">Es ist ein fehler aufgetreten!</div>
 		<div id="success_message">Aktion erfolgreich ausgeführt!</div>
-		<script>
-			get_betriebsmodus();
-			get_minimum_date();
-		</script>
-		<script src="/js/sensorwert_download.js"></script>
-		<script src="/js/message.js"></script>
+		<script src="/js/index.js"></script>
 	</body>
 </html>
