--- a/interface/admin.html
+++ b/interface/admin.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/css/navigation.css" />
 		<link rel="stylesheet" href="/css/meldungen.css" />
 		<link rel="stylesheet" href="/css/admin.css" />
-		<script src="/js/jquery.min.js"></script>
+		<script src="/js/main.js"></script>
 	</head>
 	<body style="background-color:white;">
 		<div class="navigation">
