--- a/interface/einstellungen.html
+++ b/interface/einstellungen.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="/css/einstellungen.css" />
 		<link rel="stylesheet" href="/css/livewerte.css" />
 		<link rel="stylesheet" href="/css/meldungen.css" />
-		<script src="/js/jquery.min.js"></script>
+		<script src="/js/main.js"></script>
 	</head>
 	<body style="background-color:white;">
 		<div class="navigation">
