--- a/interface/index.html
+++ b/interface/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="/css/livewerte.css" />
 		<link rel="stylesheet" href="/css/betrieb.css" />
 		<link rel="stylesheet" href="/css/meldungen.css" />
-		<script src="/js/jquery.min.js"></script>
+		<script src="/js/main.js"></script>
 	</head>
 	<body>
 		<div class="navigation">
