--- a/interface/statistik.html
+++ b/interface/statistik.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="/css/index.css" />
 		<link rel="stylesheet" href="/css/navigation.css" />
 		<link rel="stylesheet" href="/css/statistik.css" />
+		<script src="/js/main.js"></script>
 	</head>
 	<body>
 		<div class="navigation">
