--- a/interface/admin.html
+++ b/interface/admin.html
@@ -281,7 +281,7 @@
 				<a class="zeit" id="date_time"></a>
 			</div>
 		</div>
-		<div id="error_message">Es ist ein fehler aufgetreten!</div>
+		<div id="error_message">Es ist ein Fehler aufgetreten!</div>
 		<div id="success_message">Aktion erfolgreich ausgeführt!</div>
 		<script src="/js/admin.js"></script>
 	</body>
