--- a/interface/index.html
+++ b/interface/index.html
@@ -245,7 +245,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="error_message">Es ist ein fehler aufgetreten!</div>
+		<div id="error_message">Es ist ein Fehler aufgetreten!</div>
 		<div id="success_message">Aktion erfolgreich ausgeführt!</div>
 		<script src="/js/index.js"></script>
 	</body>
