--- a/interface/admin.html
+++ b/interface/admin.html
@@ -38,25 +38,9 @@
 			<button
 				class="button"
 				type="button"
-				onclick="location.href='/api/api.php?system_stop_write'"
-			>
-				System Stoppen und Grundstellung
-			</button>
-
-			<button
-				class="button"
-				type="button"
-				onclick="location.href='/api/api.php?system_start_write'"
-			>
-				System Starten
-			</button>
-
-			<button
-				class="button"
-				type="button"
 				onclick="manuelle_aktorsteuerung()"
 			>
-				Manuelle Aktorsteuerung
+				Aktoren
 			</button>
 
 			<button class="button" type="button" onclick="systemuebersicht()">
@@ -68,7 +52,7 @@
 				type="button"
 				onclick="location.href='/api/api.php?datenbank_reset_write'"
 			>
-				Datenbank zurücksetzen
+				Datenbank reset
 			</button>
 
 			<button
@@ -76,7 +60,7 @@
 				type="button"
 				onclick="location.href='/api/api.php?betriebsmeldung_reset_write'"
 			>
-				Betriebsmeldungen löschen
+				Meldungen reset
 			</button>
 
 			<button
