--- a/interface/admin.html
+++ b/interface/admin.html
@@ -35,6 +35,13 @@
 		</div>
 
 		<div class="button_box">
+			<button class="button" type="button" onclick="systemuebersicht()">
+				Automatik Stop
+			</button>
+
+			<button class="button" type="button" onclick="systemuebersicht()">
+				Automatik Start
+			</button>
 			<button
 				class="button"
 				type="button"
